--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: compile
 
 # Run this workflow every time a new commit pushed to your repository
-on: [pull_request]
+on: [pull_request, push]
 
 jobs:
   # Set the job key. The key is displayed as the job name
