Update build and CI commands

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,29 @@
 name: compile
-
 # Run this workflow every time a new commit pushed to your repository
 on: [pull_request, push]
-
 jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
-  build:
+  build_ow:
     # Name the Job
     name: Build openwhisk
     # Set the type of machine to run on
     runs-on: [self-hosted, linux]
-
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Runs the Super-Linter action
+      # Compiles openwhisk
       - name: Run build scripts
-        run: cd tests/ && make build
+        run: cd tests/ && make build_openwhisk
+  build_runtime:
+    name: Build openwhisk-runtime-go
+    runs-on: [self-hosted, linux]
+    steps:
+      # Checks out a copy of your repository on the ubuntu-latest machine
+      - name: Checkout code
+        uses: actions/checkout@v2
+      # Compiles the runtime
+      - name: Run build scripts
+        run: cd tests/ && make build_go_runtime
