--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,7 @@
 
 
-build:
+build_openwhisk:
 	cd ../openwhisk && ./gradlew build -x test
+
+build_go_runtime:
+	cd ../openwhisk-runtime-go && ./gradlew build -x test
