--- a/examples/web-crawler-n/Makefile
+++ b/examples/web-crawler-n/Makefile
@@ -1,4 +1,4 @@
-N=100
+N=5
 WSK?=wsk
 MAIN=main
 MAIN_CHILD=Mainchild
@@ -6,18 +6,22 @@ SRCS=main_$N.go go.mod go.sum
 NAME=module-main
 SRCZIP=$(MAIN)-src.zip
 ARGS_FILE=seeds.json
+TIMEOUT=240000 # 4 minutes
 
 HOST=http://172.17.0.1:3233
 
 build: $(SRCZIP)
-	wsk -i --apihost $(HOST) action update web-crawler-main $(SRCZIP) --kind go:1.15-actor --main Main
+	wsk -i --apihost $(HOST) action update web-crawler-main $(SRCZIP) --timeout $(TIMEOUT) --kind go:1.15-actor --main Main
 	i=0; while [ "$$i" -le $$(($N - 1)) ]; do \
-		wsk -i --apihost $(HOST) action update web-crawler-$$i $(SRCZIP) --kind go:1.15-actor --main ${MAIN_CHILD}$$i; \
+		wsk -i --apihost $(HOST) action update web-crawler-$$i $(SRCZIP) --timeout $(TIMEOUT) --kind go:1.15-actor --main ${MAIN_CHILD}$$i; \
 		i=$$((i + 1));\
 	done
 
 run:
 	wsk -i --apihost $(HOST) action invoke web-crawler-main --param-file $(ARGS_FILE) -b
+
+runb:
+	wsk -i --apihost $(HOST) action invoke web-crawler-main --param-file $(ARGS_FILE)
 
 runv:
 	wsk -i --apihost $(HOST) action invoke web-crawler-main -b -v -d
