Mostly running except zip/unzip are not working

--- a/openwhisk/core/standalone/src/main/resources/standalone.conf
+++ b/openwhisk/core/standalone/src/main/resources/standalone.conf
@@ -136,6 +136,21 @@ whisk {
       }
     }
   }
+
+  container-proxy {
+      timeouts {
+        # The "unusedTimeout" in the ContainerProxy,
+        #aka 'How long should a container sit idle until we kill it?'
+        idle-container = 10 seconds
+        pause-grace = 50 milliseconds
+      }
+
+      log-activation-errors {
+        application-errors = true
+        developer-errors = true
+        whisk-errors = true
+      }
+  }
 }
 
 akka-http-cors {
